DC - Added bold to first line

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
       </tr>
     </table>
 
-    <p>This is the home page for the HelloWorld Web application. </p>
+    <p><b>This is the home page for the HelloWorld Web application.</b></p>
     <p>To prove that they work, you can execute either of the following links:
     <ul>
       <li><a href="Link1.html">Link 1</a>.
